[package]
name = "miniseed"
version = "0.1.0"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmseed-sys = { git = "https://github.com/damb/libmseed-sys", branch = "feature/git-submodule" }
time = "^0.2"
